--- a/aktivitas.html
+++ b/aktivitas.html
@@ -82,7 +82,7 @@
                         <div class="col-12 col-md-10 col-lg-11 mt-4">
                             <div class="card mb-5 border-0 border-bottom">
                                 <div class="card-body d-flex justify-content-start align-items-center py-23">
-                                    <img class="me-3" src="/img/user.png" width="70px">
+                                    <img class="me-3" src="img/user.png" width="70px">
                                     <div>
                                         <h4>Dinda Fitria Indriana</h4>
                                         <p class="card-text">Mahasiswa | Junior Web Developer</p>
