--- a/pendidikan.html
+++ b/pendidikan.html
@@ -153,7 +153,7 @@
                                 <div class="col">
                                     <div class="card mb-5">
                                         <div class="card-body d-flex justify-content-start align-items-center py-23">
-                                            <img src="/img/pnl.png" width="110" class="me-3">
+                                            <img src="img/pnl.png" width="110" class="me-3">
                                             <div>
                                                 <span>Politeknik Negeri Lhokseumawe</span>
                                                 <p class="fw-bold">Teknik Informatika</p>
@@ -169,7 +169,7 @@
                                 <div class="col">
                                     <div class="card mb-5">
                                         <div class="card-body d-flex justify-content-start align-items-center ">
-                                            <img src="/img/smk.jpg" width="100" class="me-4">
+                                            <img src="img/smk.jpg" width="100" class="me-4">
                                             <div>
                                                 <span>SMK Negeri 2 Langsa</span>
                                                 <p class="fw-bold">Rekayasa Perangkat Lunak</p>
