--- a/pengalaman.html
+++ b/pengalaman.html
@@ -153,7 +153,7 @@
                                 <div class="col">
                                     <div class="card mb-5">
                                         <div class="card-body d-flex justify-content-start align-items-center py-23">
-                                            <img src="/img/jaksa.png" width="130" class="me-4">
+                                            <img src="img/jaksa.png" width="130" class="me-4">
                                             <div>
                                                 <span>Kejaksaan Negeri Langsa</span>
                                                 <p class="fw-bold">Magang</p>
