--- a/proyek.html
+++ b/proyek.html
@@ -152,7 +152,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="card">
-                                        <img src="/img/perpus.PNG" class="card-img-top" alt="...">
+                                        <img src="img/perpus.PNG" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Perpustakaan</h5>
                                             <p class="card-text text-truncate">Some quick example text to build on the
@@ -165,7 +165,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card">
-                                        <img src="/img/SMK.PNG" class="card-img-top" alt="...">
+                                        <img src="img/SMK.PNG" class="card-img-top" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Sekolah</h5>
                                             <p class="card-text text-truncate">Some quick example text to build on the
