--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -9,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <style>
-        @media (max-width: 575.98px) {
+        @media (max-width: 768px) {
             .social-media {
                 height: 120px !important;
             }
@@ -17,11 +18,12 @@
             .social-media .social-media-sub {
                 flex-direction: row !important;
                 margin-top: 20px;
-            } 
-        }
-        body {
-                font-family: 'Poppins', sans-serif;
             }
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
     </style>
 </head>
 
@@ -36,7 +38,6 @@
                     <a class="nav-link active" aria-current="page" href="#">My Portfolio</a>
                 </li>
             </ul>
-
         </div>
     </nav>
 
@@ -286,10 +287,10 @@
                             style="height: 100vh;">
                             <div
                                 class="list-group social-media-sub d-flex flex-column justify-content-around py-3 sticky-top">
-                                <div class="list-group-item border-0 ">
+                                <div class="list-group-item border-0 bg-transparent">
                                     <div class="mx-auto">
                                         <a class="text-decoration-none" href="https://github.com/dindaindriana">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35"
                                                 fill="currentColor" class="bi bi-github text-dark" viewBox="0 0 16 16">
                                                 <path
                                                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
@@ -298,14 +299,14 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="list-group-item border-0">
+                                <div class="list-group-item border-0 bg-transparent">
                                     <div class="mx-auto">
                                         <div class="fw-bold">
                                             <a class="text-decoration-none"
                                                 href="https://instagram.com/d.indriana._?igshid=ZDc4ODBmNjlmNQ==">
                                                 <svg xmlns="http://www.w3.org/2000/svg"
                                                     class="icon icon-tabler icon-tabler-brand-instagram text-danger text-center"
-                                                    width="45" height="45" viewBox="0 0 24 24" stroke-width="2"
+                                                    width="35" height="35" viewBox="0 0 24 24" stroke-width="2"
                                                     stroke="currentColor" fill="none" stroke-linecap="round"
                                                     stroke-linejoin="round">
                                                     <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
@@ -319,12 +320,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="list-group-item border-0">
+                                <div class="list-group-item border-0 bg-transparent">
                                     <div class="mx-auto">
                                         <a class="text-decoration-none" href="">
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="icon icon-tabler icon-tabler-brand-twitter" width="45"
-                                                height="45" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                                class="icon icon-tabler icon-tabler-brand-twitter" width="35"
+                                                height="35" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
                                                 fill="none" stroke-linecap="round" stroke-linejoin="round">
                                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                                 <path
