--- a/pendidikan.html
+++ b/pendidikan.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <style>
-        @media (max-width: 575.98px) {
+        @media (max-width: 768px) {
             .social-media {
                 height: 120px !important;
             }
@@ -18,11 +18,12 @@
             .social-media .social-media-sub {
                 flex-direction: row !important;
                 margin-top: 20px;
-            } 
-        }
-        body {
-                font-family: 'Poppins', sans-serif;
             }
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+        }
     </style>
 </head>
 
@@ -112,9 +113,10 @@
                                     <div class="card">
                                         <div class="card-body d-flex justify-content-start align-items-center py-23">
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="icon icon-tabler icon-tabler-code me-2" style="color: orangered;" width="40" height="40"
-                                                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                                                stroke-linecap="round" stroke-linejoin="round">
+                                                class="icon icon-tabler icon-tabler-code me-2" style="color: orangered;"
+                                                width="40" height="40" viewBox="0 0 24 24" stroke-width="2"
+                                                stroke="currentColor" fill="none" stroke-linecap="round"
+                                                stroke-linejoin="round">
                                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                                 <path d="M7 8l-4 4l4 4"></path>
                                                 <path d="M17 8l4 4l-4 4"></path>
@@ -131,9 +133,10 @@
                                     <div class="card">
                                         <div class="card-body d-flex justify-content-start align-items-center py-23">
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="icon icon-tabler icon-tabler-users me-2" style="color: blue;" width="40" height="40"
-                                                viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                                                stroke-linecap="round" stroke-linejoin="round">
+                                                class="icon icon-tabler icon-tabler-users me-2" style="color: blue;"
+                                                width="40" height="40" viewBox="0 0 24 24" stroke-width="2"
+                                                stroke="currentColor" fill="none" stroke-linecap="round"
+                                                stroke-linejoin="round">
                                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                                 <path d="M9 7m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"></path>
                                                 <path d="M3 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
@@ -174,7 +177,7 @@
                                                 <span>SMK Negeri 2 Langsa</span>
                                                 <p class="fw-bold">Rekayasa Perangkat Lunak</p>
                                                 <p class="text-muted">
-                                                    Lulusan SMK Negeri 2 Langsa tahun 2022.                                           
+                                                    Lulusan SMK Negeri 2 Langsa tahun 2022.
                                                 </p>
                                             </div>
                                         </div>
@@ -185,59 +188,59 @@
 
                         <!-- Social Media -->
                         <div class="social-media col-12 col-sm-1 text-center sticky-top d-flex align-items-center justify-content-center mt-3"
-                        style="height: 100vh;">
-                        <div
-                            class="list-group social-media-sub d-flex flex-column justify-content-around py-3 sticky-top">
-                            <div class="list-group-item border-0 ">
-                                <div class="mx-auto">
-                                    <a class="text-decoration-none" href="https://github.com/dindaindriana">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
-                                            fill="currentColor" class="bi bi-github text-dark" viewBox="0 0 16 16">
-                                            <path
-                                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
-                                        </svg>
-                                        </svg>
-                                    </a>
+                            style="height: 100vh;">
+                            <div
+                                class="list-group social-media-sub d-flex flex-column justify-content-around py-3 sticky-top">
+                                <div class="list-group-item border-0 bg-transparent">
+                                    <div class="mx-auto">
+                                        <a class="text-decoration-none" href="https://github.com/dindaindriana">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35"
+                                                fill="currentColor" class="bi bi-github text-dark" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+                                            </svg>
+                                            </svg>
+                                        </a>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="list-group-item border-0">
-                                <div class="mx-auto">
-                                    <div class="fw-bold">
-                                        <a class="text-decoration-none"
-                                            href="https://instagram.com/d.indriana._?igshid=ZDc4ODBmNjlmNQ==">
+                                <div class="list-group-item border-0 bg-transparent">
+                                    <div class="mx-auto">
+                                        <div class="fw-bold">
+                                            <a class="text-decoration-none"
+                                                href="https://instagram.com/d.indriana._?igshid=ZDc4ODBmNjlmNQ==">
+                                                <svg xmlns="http://www.w3.org/2000/svg"
+                                                    class="icon icon-tabler icon-tabler-brand-instagram text-danger text-center"
+                                                    width="35" height="35" viewBox="0 0 24 24" stroke-width="2"
+                                                    stroke="currentColor" fill="none" stroke-linecap="round"
+                                                    stroke-linejoin="round">
+                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                                    <path
+                                                        d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z">
+                                                    </path>
+                                                    <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
+                                                    <path d="M16.5 7.5l0 .01"></path>
+                                                </svg>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="list-group-item border-0 bg-transparent">
+                                    <div class="mx-auto">
+                                        <a class="text-decoration-none" href="">
                                             <svg xmlns="http://www.w3.org/2000/svg"
-                                                class="icon icon-tabler icon-tabler-brand-instagram text-danger text-center"
-                                                width="45" height="45" viewBox="0 0 24 24" stroke-width="2"
-                                                stroke="currentColor" fill="none" stroke-linecap="round"
-                                                stroke-linejoin="round">
+                                                class="icon icon-tabler icon-tabler-brand-twitter" width="35"
+                                                height="35" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
+                                                fill="none" stroke-linecap="round" stroke-linejoin="round">
                                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                                                 <path
-                                                    d="M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z">
+                                                    d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z">
                                                 </path>
-                                                <path d="M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0"></path>
-                                                <path d="M16.5 7.5l0 .01"></path>
                                             </svg>
                                         </a>
                                     </div>
                                 </div>
                             </div>
-                            <div class="list-group-item border-0">
-                                <div class="mx-auto">
-                                    <a class="text-decoration-none" href="">
-                                        <svg xmlns="http://www.w3.org/2000/svg"
-                                            class="icon icon-tabler icon-tabler-brand-twitter" width="45"
-                                            height="45" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"
-                                            fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                            <path
-                                                d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z">
-                                            </path>
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
                         </div>
-                    </div>
                     </div>
                 </div>
             </div>
